Header alignment fixed

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,3 +20,41 @@
   padding: 5px 20px 5px 20px;
   font-size: 20px;
 }
+
+.home-banner{
+  font-size: 40px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-container{
+  margin: 20px;
+}
+
+.txt-size-40{
+  color: white;
+  font-size: 40px;
+}
+
+.txt-size-20{
+  font-size: 20px;
+}
+
+.color-gray{
+  color: #b9bdba;
+}
+
+.flex-center{
+  display: flex;
+  justify-content: center;
+}
+
+.w-50{
+  width: 50%
+}
+
+.m-auto{
+  margin: auto;
+}
